css/style.css
.contentSection{
/*    margin-bottom: 10px;*/
}

#socialSection{
    display: inline-block;
    margin-top: 3px;
}

li.fb-album, li.fb-photo {
    display: block;    
    float: left;
    overflow: hidden;
    cursor: pointer;
    border-bottom-style: none;

    margin-left: 2px;
    margin-right: 2px;
    margin: 2px;
    
/*    padding: 2px;*/
    
    width: 237px;
    height: 237px;
    
}

.fb-photo-thumb, .fb-photo-thumb-link {
    border: none;
    text-decoration: none;
    widows: auto;
    overflow: visible;
    
    object-fit: none; /* Do not scale the image */
    object-position: center; /* Center the image within the element */
    height: 241px;
    width: 241px;
}


#infographicSection{
    background: url(../imgs/infographic-tray.png);
    height: 1300px;
}

.btn-container{
    position: relative;
    left: 16%;
    top: 88%;
    width: 68%;
}

.info-btn{
    width: 45%;
}

.info-btn-text{
    font-size: 24px;
    text-transform: none;
}

#lunchSection{
    margin-top: 10px;
}

.lunchThumbnail{
    height: 643px;
    width:auto;
    background-size: 100%;
}

.foodNames{
    font-weight: 900;
    font-size: 60px;
    color: white;
    top: 85%;
    left: 25px;
    transform: translate(-50%,-50%); 
    position: relative;
    text-shadow: 6px 2px 2px #000000;
}

#lunch1{
    background-image: url("../imgs/bbq-pork-ribs.jpg");
}
#lunch2{
    background-image: url("../imgs/beef-and-broccoli.jpg");
}
#lunch3{
    background-image: url("../imgs/shredded-pork-tacos.jpg");
}
#lunch4{
    background-image: url("../imgs/pulled-pork-sandwich.jpg");
}
#lunch5{
    background-image: url("../imgs/oven-fried-chicken.jpg");
}
#lunch6{
    background-image: url("../imgs/turkey-rueben-sandwich.jpg");
}
#lunch7{
    background-image: url("../imgs/veggie-burger.jpg");
}
#lunch8{
    background-image: url("../imgs/veggie-tofu-rice-bowl.jpg");
}
#lunch9{
    background-image: url("../imgs/pesto-pizza.jpg");
}

.lunchDetails{
    height: 270px;
    width: 100%;
    padding-top: 10px;
    background-color: #e8e7dd;
    display: inline-block;
    position: relative;
}

.lunchDetails-name{
    margin-top: 10px;;
    margin-left: 10px;
    width: 80%;
    font-weight: 900;
    font-size: 50px;
    color: #4c8441;
    text-shadow: 1px 1px 1px #4c8441;
}

.fullscreen-btn{
    position: absolute;
    right: 10px;
    top: -635px;
    display: inline-block;
    background-image: url(../imgs/fullscreen-icon.png);
    height: 65px;
    width: 65px;
}

.save-btn{
    position: absolute;
    right: 0px;
    top: 0px;
    display: inline-block;
    background-image: url(../imgs/fullscreen-icon.png);
    width: 105px;
}
.save-btn-text{
    font-size: 24px;
    text-transform: capitalize !important;
}

.lunchDetails-comment{
    margin-left: auto;
    margin-right: auto;
    margin-top: 10px;
    width: 80%;
    background-color: white;
    padding: 10px;
    font-size: 24px;
    line-height: 1.6;
    color: #585246;
    
}

.copyComment{
    width: 25%;
    margin-top: 20px;
    margin-left: 40%;
    margin-right: 40%;
    text-transform: capitalize !important;
}

.copyComment-text{
    font-size: 24px;
}

#shareSection{
    
}

#fullscreen-mode{
    display: none;
}

#fullscreen-meal{
    max-width: 100%;
    max-height: 100%;
    bottom: 0;
    left: 0;
    margin: auto;
    overflow: auto;
    position: fixed;
    right: 0;
    top: 0;
}

#rotate-screen-overlay-background{
    max-width: 100%;
    max-height: 100%;
    bottom: 0;
    left: 0;
    margin: auto;
    overflow: auto;
    position: fixed;
    right: 0;
    top: 0;
    
    background-color: #151515;
    opacity: .90;
}

#rotate-screen-overlay-message{
    opacity: .85;
    background: #e2e2e2;
    border: solid 10px #585246;
    border-radius: 20px;
    bottom: 0;
    height: 300px;
    left: 0;
    margin: auto;
    position: fixed;
    top: 0;
    right: 0;
    width: 450px;   
}

#rotate-screen-overlay-text{
    bottom: 0;
    height: 275px;
    left: 0;
    margin: auto;
    position: fixed;
    top: 0;
    right: 0;
    width: 425px;   
    font-size: 50px;
    word-wrap: break-word;
    text-align: center;
}

#rotate-screen-overlay-message img{
    width: 150px;
    height:1 50px;
    position: fixed;
    margin: auto;
    top: 100px;
    left: 0;
    right: 0;
    bottom: 0;
}

